--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   "author": "jeremy@integratingmagic.io",
   "license": "ISC",
   "dependencies": {
+    "@popperjs/core": "^2.11.0",
+    "bootstrap": "^5.1.3",
+    "crossfilter2": "^1.5.4",
+    "dc": "^4.2.7",
     "fm-webviewer-fetch": "^1.1.0",
     "regenerator-runtime": "^0.13.9"
   },
